# DotCache

./: .gitignore  .venv  README.md  dotcache_full.tex  dotcache_layer_page_selection.md  dotcache_no_cuda_bootstrap_m4_amd.md  dotcache_nvidia_llama_bootstrap.md  dotcache_page_selection_blog.md  dotcache_software_implementation_guide.md  pyproject.toml
benchmarks/: bench_common.py  bench_decode.py  bench_decode_envelope_sweep.py  bench_decode_envelope_tuner.py  bench_decode_eviction.py  bench_decode_growth.py  bench_decode_reuse.py  bench_decode_session.py  bench_encode.py  bench_gguf_external.py  bench_grouped_lowbit_decode_micro.py  bench_hf_mount_compare.py  bench_kv_quant_matrix.py  bench_layer_sensitivity.py  bench_llama_compare.py  bench_llama_decode.py  bench_llama_loss.py  bench_llama_mixed_bits_profile.py  bench_llama_mode_profile.py  bench_m0_write_micro.py  bench_mix.py  bench_model_matrix.py  bench_page_sweep.py  bench_qwen2_compare.py  bench_qwen35_attention_subset.py  bench_qwen35_attention_subset_ablation.py  bench_qwen35_attention_subset_dotcache.py  bench_qwen35_attention_subset_dotcache_longbench_qa.py  bench_qwen35_attention_subset_dotcache_loss.py  bench_qwen35_attention_subset_dotcache_needle.py  bench_qwen35_attention_subset_dotcache_serving.py  bench_qwen35_attention_subset_statecache_dotcache.py  bench_qwen35_deltanet_state_ablation.py  bench_qwen35_deltanet_state_inspect.py  bench_qwen35_deltanet_statecache_localization.py  bench_qwen35_deltanet_statecache_loss.py  bench_qwen35_deltanet_statecache_readout.py  bench_qwen35_hybrid_failure_localize.py  (+11 more)
(+14393 files in other folders)
