[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotcache"
version = "0.1.0"
description = "Software-first DotCache prototype for compressed-domain KV-cache execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
mps = [
  "torch>=2.5",
]
hf = [
  "transformers>=5.3.0",
  "sentencepiece>=0.2.1",
  "safetensors>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["dotcache", "dotcache.backends", "dotcache.integrations", "dotcache.modes"]
