[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotcache"
version = "0.1.0"
description = "Compressed-domain KV-cache research runtime with HF model integration, MPS/CUDA backends, and vLLM scaffolding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
mps = [
  "torch>=2.5",
]
hf = [
  "transformers>=5.3.0",
  "sentencepiece>=0.2.1",
  "safetensors>=0.7.0",
]
vllm = [
  "torch>=2.5",
  "vllm>=0.18,<0.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = [
  "dotcache",
  "dotcache.backends",
  "dotcache.integrations",
  "dotcache.integrations.vllm_adapter",
  "dotcache.modes",
]
